--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,4 @@ services:
       - "8088:8088"
     volumes:
       - ./config/config.dev.yaml:/app/config.dev.yaml
-    command: /app/openapi http -c /app
+    command: /app/etl http -c /app
