--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,5 @@ services:
       - "8088:8088"
     volumes:
       - ./config/config.dev.yaml:/app/config.dev.yaml
+      - ./config/flashloan.txt:/app/flashloan.txt
     command: /app/etl http -c /app
