fix: multi worker to deal data

--- a/supervisor/skyeye-sample.conf
+++ b/supervisor/skyeye-sample.conf
@@ -1,5 +1,5 @@
 [program:skyeye-<chain>]
-command=<etl_bin_path> sky-eye --config <config_path> --workers 2 --chain <chain>
+command=<etl_bin_path> skyeye --config <config_path> --workers 2 --chain <chain>
 autostart=true
 startsecs=3
 startretries=100
